--- a/Pages/index.html
+++ b/Pages/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="/Styles/style.css">
 </head>
 <body>
 
-    <div class="header" style="display: flex; align-items: center;">
-        <h1>Hello,</h1>
-        <h2 style="margin-left: 10px;">I'm Virginia Nelai</h2>
+    <div>
+        <h1>Hello World!</h1>
     </div>
+    <div>
+        <h2>I'm Virginia Nelai</h2>
+    </div>    
     <div>
         <h4>A Junior Software Engineer focused on building websites and applications 
             that drive product success. Skilled in frontend development, UI design, 
