Add My Journey text

--- a/Pages/about_me.html
+++ b/Pages/about_me.html
@@ -6,6 +6,34 @@
     <title>About Me</title>
 </head>
 <body>
-    
+    <h1>About Me</h1>
+    <h3>My Journey</h3>
+    <p>After completing high school in Greece, I moved to New York with the goal of pursuing a pre-med 
+        track in college. Driven by strong academic performance and family expectations, medicine appeared 
+        to be a stable path for growth. However, unforeseen circumstances required me to care for my two 
+        younger siblings, making it challenging to balance my studies. As a result, I redirected my efforts 
+        toward multiple jobs to provide a stable foundation for my family.
+    </p>
+    <p>
+        My career journey began as a shift supervisor at an adult home, where I found deep satisfaction 
+        in helping others. I then transitioned to a role at a music venue, starting as an inventory manager 
+        and advancing to director of operations for retail, events, and music operations. In this position, 
+        I honed my organizational skills and leadership abilities while cultivating a passion for data and 
+        technology. Recognizing the need for further certification to align my skills with equitable 
+        opportunities, I completed Google’s Data Analytics certification, which reignited my interest 
+        in math and opened the door to the tech field. Eager to learn more, I delved into cybersecurity 
+        and software engineering, earning several certifications through self-study. I later enrolled 
+        in a software engineering bootcamp, gaining hands-on experience with the MERN stack and project 
+        management. Additionally, I worked as an Admitting Representative in the emergency department 
+        of a well-renowned hospital, where I gained insights into the healthcare industry and finance 
+        operations. This experience taught me how to thrive in a fast-paced, high-pressure environment.
+    </p>
+    <p>
+        Today, equipped with knowledge in both cybersecurity and software engineering, I’m actively 
+        working on projects to deepen my skills and secure my first role in tech. My next goal is to 
+        pursue a master’s degree in computer science, completing a journey that has come full circle—from 
+        healthcare to a genuine passion for technology, driven by resilience and adaptability.
+    </p>
+    <h1>My Skills</h1>
 </body>
 </html>
