--- a/Pages/about_me.html
+++ b/Pages/about_me.html
@@ -7,34 +7,88 @@
     <title>About Me</title>
 </head>
 <body>
-    <h1>About Me</h1>
-    <h3>My Journey</h3>
-    <p>After completing high school in Greece, I moved to New York with the goal of pursuing a pre-med 
-        track in college. Driven by strong academic performance and family expectations, medicine appeared 
-        to be a stable path for growth. However, unforeseen circumstances required me to care for my two 
-        younger siblings, making it challenging to balance my studies. As a result, I redirected my efforts 
-        toward multiple jobs to provide a stable foundation for my family.
-    </p>
-    <p>
-        My career journey began as a shift supervisor at an adult home, where I found deep satisfaction 
-        in helping others. I then transitioned to a role at a music venue, starting as an inventory manager 
-        and advancing to director of operations for retail, events, and music operations. In this position, 
-        I honed my organizational skills and leadership abilities while cultivating a passion for data and 
-        technology. Recognizing the need for further certification to align my skills with equitable 
-        opportunities, I completed Google’s Data Analytics certification, which reignited my interest 
-        in math and opened the door to the tech field. Eager to learn more, I delved into cybersecurity 
-        and software engineering, earning several certifications through self-study. I later enrolled 
-        in a software engineering bootcamp, gaining hands-on experience with the MERN stack and project 
-        management. Additionally, I worked as an Admitting Representative in the emergency department 
-        of a well-renowned hospital, where I gained insights into the healthcare industry and finance 
-        operations. This experience taught me how to thrive in a fast-paced, high-pressure environment.
-    </p>
-    <p>
-        Today, equipped with knowledge in both cybersecurity and software engineering, I’m actively 
-        working on projects to deepen my skills and secure my first role in tech. My next goal is to 
-        pursue a master’s degree in computer science, completing a journey that has come full circle—from 
-        healthcare to a genuine passion for technology, driven by resilience and adaptability.
-    </p>
-    <h1>My Skills</h1>
+    <div>
+        <h1>About Me</h1>
+        <h3>My Journey</h3>
+        <p>After completing high school in Greece, I moved to New York with the goal of pursuing a pre-med 
+            track in college. Driven by strong academic performance and family expectations, medicine appeared 
+            to be a stable path for growth. However, unforeseen circumstances required me to care for my two 
+            younger siblings, making it challenging to balance my studies. As a result, I redirected my efforts 
+            toward multiple jobs to provide a stable foundation for my family.
+        </p>
+        <p>
+            My career journey began as a shift supervisor at an adult home, where I found deep satisfaction 
+            in helping others. I then transitioned to a role at a music venue, starting as an inventory manager 
+            and advancing to director of operations for retail, events, and music operations. In this position, 
+            I honed my organizational skills and leadership abilities while cultivating a passion for data and 
+            technology. Recognizing the need for further certification to align my skills with equitable 
+            opportunities, I completed Google’s Data Analytics certification, which reignited my interest 
+            in math and opened the door to the tech field. Eager to learn more, I delved into cybersecurity 
+            and software engineering, earning several certifications through self-study. I later enrolled 
+            in a software engineering bootcamp, gaining hands-on experience with the MERN stack and project 
+            management. Additionally, I worked as an Admitting Representative in the emergency department 
+            of a well-renowned hospital, where I gained insights into the healthcare industry and finance 
+            operations. This experience taught me how to thrive in a fast-paced, high-pressure environment.
+        </p>
+        <p>
+            Today, equipped with knowledge in both cybersecurity and software engineering, I’m actively 
+            working on projects to deepen my skills and secure my first role in tech. My next goal is to 
+            pursue a master’s degree in computer science, completing a journey that has come full circle—from 
+            healthcare to a genuine passion for technology, driven by resilience and adaptability.
+        </p>    
+    </div>
+    <div>
+        <h1>My Skills</h1>
+        <ul>
+            <li class="software-skill-inline" name="html-5">
+                <i class="fab fa-html5"></i>
+                <p>HTML-5</p>
+            </li>
+            <li class="software-skill-inline" name="css3">
+                <i class="fab fa-css3-alt"></i>
+                <p>CSS3</p>
+            </li>
+            <li class="software-skill-inline" name="JavaScript">
+                <i class="fab fa-js"></i>
+                <p>JavaScript</p>
+            </li>     
+            <li class="software-skill-inline" name="reactjs">
+                <i class="fab fa-react"></i>
+                <p>Reactjs</p>
+            </li>
+            <li class="software-skill-inline" name="nodejs">
+                <i class="fab fa-node"></i>
+                <p>Nodejs</p>
+            </li>
+            <li class="software-skill-inline" name="mongo-database">
+                <i class="fas fa-database"></i>
+                <p>Mongo-Database</p>
+            </li>
+            <li class="software-skill-inline" name="Python">
+                <i class="fab fa-python"></i>
+                <p>Python</p>
+            </li>
+            <li class="software-skill-inline" name="R">
+                <i class="fas fa-code"></i> <!-- This uses a generic code icon -->
+                <p>R</p>
+            </li>
+            <li class="software-skill-inline" name="MySQL">
+                <i class="fas fa-database"></i> <!-- MySQL icon representation -->
+                <p>MySQL</p>
+            </li>
+            <li class="cybersecurity-skill-inline">
+                <i class="fas fa-lock"></i>
+                <p>Network Security</p>
+            </li>
+            <li class="cybersecurity-skill-inline">
+                <i class="fas fa-shield-alt"></i>
+                <p>Threat Protection</p>
+            </li>
+            <li class="cybersecurity-skill-inline">
+                <i class="fas fa-key"></i>
+                <p>Access Control</p>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
