Add buttons to home page

--- a/Pages/home.html
+++ b/Pages/home.html
@@ -19,6 +19,8 @@
             that drive product success. Skilled in frontend development, UI design, 
             and security solutions, with expertise in HTML, CSS, JavaScript, and React. 
             I'm passionate about creating impactful user experiences.</h4>
+            <button>Contact Me</button>
+            <button>See My Resume</button>
             <button>View My Projects</button>
     </div>
 </body>
