--- a/Pages/home.html
+++ b/Pages/home.html
@@ -7,21 +7,41 @@
     <title>My Portfolio</title>
 </head>
 <body>
-
-    <div>
+    <header>
         <h1>Hello World!</h1>
-    </div>
-    <div>
         <h2>I'm Virginia Nelai</h2>
-    </div>    
-    <div>
         <h4>A Junior Software Engineer focused on building websites and applications 
             that drive product success. Skilled in frontend development, UI design, 
             and security solutions, with expertise in HTML, CSS, JavaScript, and React. 
             I'm passionate about creating impactful user experiences.</h4>
-            <button>Contact Me</button>
-            <button>See My Resume</button>
-            <button>View My Projects</button>
+    </header>
+    <div class="social-media-div">
+        <a href="https://github.com/vnelai" class="icon-button github" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-github"></i>
+        </a> 
+        <a href="https://www.linkedin.com" class="icon-button linkedin" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-linkedin-in"></i>
+        </a> 
+        <a href="mailto:vnelai01@gmail.com" class="icon-button google" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-google"></i>
+        </a>
+        <a href="https://www.facebook.com" class="icon-button facebook" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com" class="icon-button instagram" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://twitter.com/" class="icon-button twitter" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://medium.com" class="icon-button medium" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-medium"></i>
+        </a>
+    </div>
+    <div>
+        <button>Contact Me</button>
+        <button>See My Resume</button>
+        <button>View My Projects</button>
     </div>
 </body>
 </html>
