Add CSS external styling for Contact Me Page

--- a/Pages/contact_me.html
+++ b/Pages/contact_me.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1>Contact me</h1>
+        <h1>Contact Me</h1>
         <h4>I’d love to hear from you! Please fill out the form below, 
         and I’ll respond as quickly as I can.</h4>
         <div class="contact__form-container">
