--- a/Pages/my_resume.html
+++ b/Pages/my_resume.html
@@ -7,6 +7,100 @@
     <title>My Resume</title>
 </head>
 <body>
-    
+    <h1> Virginia Nelai</h1>
+    <h2>Junior Software Engineer</h2> 
+    <h4>Contact<br>vnelai01@gmail.com</h4>
+    <hr>
+    <h2>Summary</h2>
+    <p>Dynamic professional with a background in healthcare and retail operations, 
+        strong problem-solving skills, and experience in leadership and cybersecurity. 
+        Adept at collaborating with cross-functional teams and implementing process improvements. 
+        Eager to leverage diverse experiences and technical skills to contribute 
+        effectively to software engineering projects.</p>
+    <hr>
+    <h2>Work Experience</h2>
+    <ul>
+        <li>NYU Langone Health - Emergency Department
+            Admitting Representative (2023-Present)</li>
+            <ul>
+                <li>Conduct patient intake, registration, and billing tasks accurately. </li>
+                <li>Collaborate with medical teams for seamless patient admissions.</li>
+                <li>Provide exceptional customer service, addressing inquiries promptly.</li>
+                <li>Document patient information accurately in EHR systems.</li>
+                <li>Resolve issues related to registration, insurance, and billing.</li>
+                <li>Ensure compliance with organizational policies and regulations.</li>
+            </ul> 
+        <li>Fightklub Studios LLC - Director of Retail Operations (2020-2023)</li> 
+        <ul>
+            <li>Led retail operations, focused on data-driven decision-making.</li>
+            <li>Increased profitability by optimizing revenue by 30% and fulfilling
+                lower overhead costs by 15%.</li>
+            <li>Utilized Excel and Tableau for data analysis and visualization.</li>    
+            <li>Analyzed social media and influencer marketing data.</li>
+            <li>Collaborated with stakeholders to implement new procedures and
+                corrective actions, driving improvements in company performance.</li>
+        </ul>
+        <li>Fightklub Studios LLC - Retail manager (2019-2020)</li>
+        <ul>
+            <li>Managed and supervised daily operations for a team of 20 employees.</li>
+            <li>Provided technical support for point-of-sale systems.</li>
+            <li>Ensured customer satisfaction through prompt solutions.</li>
+            <li>Forecasted inventory demands by analyzing sales data and trends to optimize stock levels.</li>
+        </ul>
+        <li>St. Michaels Home - Shift Supervisor (2010-2019)</li>
+        <ul>
+            <li>Applied problem-solving skills during medical emergencies.</li>
+            <li>Generated detailed shift reports and communicated observations.</li>
+            <li>Collaborated with healthcare professionals to address patient needs.</li>
+            <li>Provided clear and professional communication with patients and
+                colleagues.</li>
+        </ul>
+    </ul> 
+    <hr>
+    <h2>Skills</h2>
+    <ul>
+        <li>Lifelong Learner</li>
+        <li>Problem Solving</li>
+        <li>Teamwork</li>
+        <li>Adaptability</li>
+        <li>Time Management</li>
+        <br>
+        <li>Python, R, HTML, CSS, Javascript</li>
+        <li>SQL</li>
+        <li>Version Control</li>
+        <li>Data Structures</li>
+
+    </ul>
+    <hr>
+    <h2>Education</h2>
+    <p>BS in Biology at CUNY Lehman College</p>
+    <p>Descrete Math at University of North Dakota
+    <p>Software Engineering Bootcamp at PerScholas</p>    
+    </p>
+    <hr>
+    <h2>Certifications</h2>
+    <ul>
+        <li>Google Data Analytics</li>
+        <li>Comptia ITF</li>
+        <li>Comptia A+</li>
+        <li>Comptia Network+</li>
+        <li>Comptia Security+</li>
+        <li>Python PCEP</li>
+    </ul>
+    <hr>
+    <h2>Interests</h2>
+    <ul>
+        <li>Universe News</li>
+        <li>World News</li>
+        <li>Video Games</li>
+        <li>Music</li>
+        <li>Video Editing</li>
+    </ul>
+    <hr> 
+    <h2>Languages</h2>
+    <ul>
+        <li>English</li>
+        <li>Greek</li>
+    </ul>
 </body>
 </html>
