Add home page giphy/video

--- a/Pages/home.html
+++ b/Pages/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Hello World!</h1>
+        <h1 class="Greetings">Hello World!</h1>
         <h2>I'm Virginia Nelai</h2>
         <h4>A Junior Software Engineer focused on building websites and applications 
             that drive product success. Skilled in frontend development, UI design, 
@@ -45,6 +45,12 @@
         <button>Contact Me</button>
         <button>See My Resume</button>
         <button>View My Projects</button>
+    </div>
+    <div class="home-image">
+        <video width="600" autoplay loop muted>
+            <source src="/Media/matrix code.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
     </div>
 </body>
 </html>
