--- a/Pages/about_me.html
+++ b/Pages/about_me.html
@@ -90,5 +90,9 @@
             </li>
         </ul>
     </div>
+    <div>
+        <img src="/Media/story book.jpg" alt="Story Book" width="100%" height="auto" style="max-width: 600px; display: block; margin: 0 auto;">
+    </div>
+
 </body>
 </html>
