Add styles on About Me Skills

--- a/Pages/about_me.html
+++ b/Pages/about_me.html
@@ -37,54 +37,54 @@
             healthcare to a genuine passion for technology, driven by resilience and adaptability.
         </p>    
     </div>
-    <div>
+    <div class="technical-skills-main-div">
         <h3>My Skills</h3>
-        <ul>
-            <li class="software-skill-inline" name="html-5">
+        <ul class="tech-icons">
+            <li class="tech-skill-inline" name="html-5">
                 <i class="fab fa-html5"></i>
                 <p>HTML-5</p>
             </li>
-            <li class="software-skill-inline" name="css3">
+            <li class="tech-skill-inline" name="css3">
                 <i class="fab fa-css3-alt"></i>
                 <p>CSS3</p>
             </li>
-            <li class="software-skill-inline" name="JavaScript">
+            <li class="tech-skill-inline" name="JavaScript">
                 <i class="fab fa-js"></i>
                 <p>JavaScript</p>
             </li>     
-            <li class="software-skill-inline" name="reactjs">
+            <li class="tech-skill-inline" name="reactjs">
                 <i class="fab fa-react"></i>
                 <p>Reactjs</p>
             </li>
-            <li class="software-skill-inline" name="nodejs">
+            <li class="tech-skill-inline" name="nodejs">
                 <i class="fab fa-node"></i>
                 <p>Nodejs</p>
             </li>
-            <li class="software-skill-inline" name="mongo-database">
+            <li class="tech-skill-inline" name="mongo-database">
                 <i class="fas fa-database"></i>
-                <p>Mongo-Database</p>
+                <p>Mongo-Db</p>
             </li>
-            <li class="software-skill-inline" name="Python">
+            <li class="tech-skill-inline" name="Python">
                 <i class="fab fa-python"></i>
                 <p>Python</p>
             </li>
-            <li class="software-skill-inline" name="R">
+            <li class="tech-skill-inline" name="R">
                 <i class="fas fa-code"></i> <!-- This uses a generic code icon -->
                 <p>R</p>
             </li>
-            <li class="software-skill-inline" name="MySQL">
+            <li class="tech-skill-inline" name="MySQL">
                 <i class="fas fa-database"></i> <!-- MySQL icon representation -->
                 <p>MySQL</p>
             </li>
-            <li class="cybersecurity-skill-inline">
+            <li class="tech-skill-inline">
                 <i class="fas fa-lock"></i>
                 <p>Network Security</p>
             </li>
-            <li class="cybersecurity-skill-inline">
+            <li class="tech-skill-inline">
                 <i class="fas fa-shield-alt"></i>
                 <p>Threat Protection</p>
             </li>
-            <li class="cybersecurity-skill-inline">
+            <li class="tech-skill-inline">
                 <i class="fas fa-key"></i>
                 <p>Access Control</p>
             </li>
