Switch home page video with giphy in order to meet assignment requirement

--- a/Pages/home.html
+++ b/Pages/home.html
@@ -47,10 +47,7 @@
         <button>View My Projects</button>
     </div>
     <div class="home-image">
-        <video width="600" autoplay loop muted>
-            <source src="/Media/matrix code.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGFhb25ucnNvcjQyaTBsc3ExMGRoZmRxb3Qwc2Z2YnNnOWQybTFnYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/FcqKy4Kj7XOK0hCW4g/giphy.webp" alt="Giphy-Animation" width="auto" height="auto" style="max-width: 100%;">
     </div>
 </body>
 </html>
