Added table in MyResume

--- a/Pages/my_resume.html
+++ b/Pages/my_resume.html
@@ -88,14 +88,30 @@
         <li>Python PCEP</li>
     </ul>
     <hr>
-    <h2>Interests</h2>
-    <ul>
-        <li>Universe News</li>
-        <li>World News</li>
-        <li>Video Games</li>
-        <li>Music</li>
-        <li>Video Editing</li>
-    </ul>
+    <h2>Fun Facts</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Interest</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Hobbies</td>
+                <td>Gaming, Video Editing, and Music Remixing</td>
+            </tr>
+            <tr>
+                <td>Favorite Programming Language</td>
+                <td>Python</td>
+            </tr>
+            <tr>
+                <td>News</td>
+                <td>World and Universe News</td>
+            </tr>
+        </tbody>
+    </table>
+
     <hr> 
     <h2>Languages</h2>
     <ul>
