Added structural styling to my_resume table

--- a/Pages/my_resume.html
+++ b/Pages/my_resume.html
@@ -99,10 +99,10 @@
         <tbody>
             <tr>
                 <td>Hobbies</td>
-                <td>Gaming, Video Editing, and Music Remixing</td>
+                <td>Gaming, Video and Music Editing</td>
             </tr>
             <tr>
-                <td>Favorite Programming Language</td>
+                <td>Favorite Language</td>
                 <td>Python</td>
             </tr>
             <tr>
