Fine tune some styles

--- a/Pages/about_me.html
+++ b/Pages/about_me.html
@@ -37,56 +37,52 @@
             healthcare to a genuine passion for technology, driven by resilience and adaptability.
         </p>    
     </div>
-    <div class="technical-skills-main-div">
+    <div class="technical-skills-div">
         <h3>My Skills</h3>
         <ul class="tech-icons">
-            <li class="tech-skill-inline" name="html-5">
-                <i class="fab fa-html5"></i>
+            <li class="tech-skill" name="html-5">
+                <i class="fa-brands fa-html5"></i>
                 <p>HTML-5</p>
             </li>
-            <li class="tech-skill-inline" name="css3">
-                <i class="fab fa-css3-alt"></i>
+            <li class="tech-skill" name="css3">
+                <i class="fa-brands fa-css3-alt"></i>
                 <p>CSS3</p>
             </li>
-            <li class="tech-skill-inline" name="JavaScript">
-                <i class="fab fa-js"></i>
+            <li class="tech-skill" name="JavaScript">
+                <i class="fa-brands fa-js"></i>
                 <p>JavaScript</p>
             </li>     
-            <li class="tech-skill-inline" name="reactjs">
-                <i class="fab fa-react"></i>
+            <li class="tech-skill" name="reactjs">
+                <i class="fa-brands fa-react"></i>
                 <p>Reactjs</p>
             </li>
-            <li class="tech-skill-inline" name="nodejs">
-                <i class="fab fa-node"></i>
+            <li class="tech-skill" name="nodejs">
+                <i class="fa-brands fa-node"></i>
                 <p>Nodejs</p>
             </li>
-            <li class="tech-skill-inline" name="mongo-database">
+            <li class="tech-skill" name="mongo-database">
                 <i class="fas fa-database"></i>
                 <p>Mongo-Db</p>
             </li>
-            <li class="tech-skill-inline" name="Python">
-                <i class="fab fa-python"></i>
+            <li class="tech-skill" name="Python">
+                <i class="fa-brands fa-python"></i>
                 <p>Python</p>
             </li>
-            <li class="tech-skill-inline" name="R">
+            <li class="tech-skill" name="R">
                 <i class="fas fa-code"></i> <!-- This uses a generic code icon -->
                 <p>R</p>
             </li>
-            <li class="tech-skill-inline" name="MySQL">
+            <li class="tech-skill" name="MySQL">
                 <i class="fas fa-database"></i> <!-- MySQL icon representation -->
                 <p>MySQL</p>
             </li>
-            <li class="tech-skill-inline">
+            <li class="tech-skill">
                 <i class="fas fa-lock"></i>
                 <p>Network Security</p>
             </li>
-            <li class="tech-skill-inline">
+            <li class="tech-skill">
                 <i class="fas fa-shield-alt"></i>
                 <p>Threat Protection</p>
-            </li>
-            <li class="tech-skill-inline">
-                <i class="fas fa-key"></i>
-                <p>Access Control</p>
             </li>
         </ul>
     </div>
