--- a/Pages/contact_me.html
+++ b/Pages/contact_me.html
@@ -29,8 +29,20 @@
                 Submit
               </button>
             </form>
-          </div>
+          </div> 
     </div>
-    
 </body>
+<footer>
+  <div>
+    <h2>Subscribe to Newsletter</h2>
+    <p>Stay updated on my latest projects 😊 </p>
+    <form action="#" class="newsletter__form" method="post">
+    <div class="newsletter__form_field">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email">
+      <button type="submit">Subscribe</button>
+    </div>
+  </form>
+  </div> 
+</footer>
 </html>
