--- a/Pages/home.html
+++ b/Pages/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="greetings">Hello World!<span class="wave">👋</span></h1>
+        <h1 class="greetings" style="color: #55198b;">Hello World!<span class="wave">👋</span></h1>
         <h2>I'm Virginia Nelai</h2>
         <h4>A Junior Software Engineer focused on building websites and applications 
             that drive product success. Skilled in frontend development, UI design, 
