--- a/Pages/contact_me.html
+++ b/Pages/contact_me.html
@@ -8,41 +8,45 @@
 </head>
 <body>
     <div>
+      <div id="contact_me_header">
         <h1>Contact Me</h1>
         <h4>I’d love to hear from you! Please fill out the form below, 
         and I’ll respond as quickly as I can.</h4>
-        <div class="contact__form-container">
-            <form action="#" class="contact__form" method="post"><input type="hidden" name="form-name" value="form 1">
-              <div class="contact__form-field">
-                <label class="contact__form-label" for="name">Name</label>
-                <input required="" placeholder="Enter Your Name" type="text" class="contact__form-input" name="name" id="name">
-              </div>
-              <div class="contact__form-field">
-                <label class="contact__form-label" for="email">Email</label>
-                <input required="" placeholder="Enter Your Email" type="email" class="contact__form-input" name="email" id="email">
-              </div>
-              <div class="contact__form-field">
-                <label class="contact__form-label" for="message">Message</label>
-                <textarea required="" cols="30" rows="10" class="contact__form-input" placeholder="Enter Your Message" name="message" id="message"></textarea>
-              </div>
-              <button type="submit" class="btn btn--theme contact__btn">
-                Submit
-              </button>
-            </form>
-          </div> 
+      </div>
+      <div class="contact__form_container">
+          <form action="#" method="post"><input type="hidden" name="contact_form" value="form 1">
+            <div class="contact__form_field">
+              <label class="contact__form_label" for="name">Name</label>
+              <input required="" placeholder="Enter Your Name" type="text" class="contact__form_input" name="name" id="name">
+            </div>
+            <div class="contact__form_field">
+              <label class="contact__form_label" for="email">Email</label>
+              <input required="" placeholder="Enter Your Email" type="email" class="contact__form_input" name="email" id="email">
+            </div>
+            <div class="contact__form_field">
+              <label class="contact__form_label" for="message">Message</label>
+              <textarea required="" cols="10" rows="10" class="contact__form_input" placeholder="Enter Your Message" name="message" id="message"></textarea>
+            </div>
+          <button type="submit" id="contact_submit_button">
+            Submit
+          </button>
+          </form>
+        </div> 
     </div>
 </body>
 <footer>
-  <div>
-    <h2>Subscribe to Newsletter</h2>
-    <p>Stay updated on my latest projects 😊 </p>
-    <form action="#" class="newsletter__form" method="post">
-    <div class="newsletter__form_field">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" placeholder="Enter your email">
-      <button type="submit">Subscribe</button>
+  <div class="newsletter_container">
+    <div id="newsletter_header">
+      <h2>Subscribe to my Newsletter</h2>
+      <p>Stay updated on my latest projects 😊 </p>
     </div>
+    <form action="#" method="post">
+      <div class="newsletter_field">
+        <label for="email" class="newsletter_label">Email:</label>
+        <input class="newsletter_input" id="email" name="email" placeholder="Enter your email">
+      </div>
+      <button type="submit" id="newsletter_submit_button">Subscribe</button>
+  </div>
   </form>
-  </div> 
 </footer>
 </html>
